2011-11-18  Alexander V. Lukyanov <lav@yars.free.net>

	* TimeDate.cc: fixed IsoDateTime (added seconds).

2011-11-16  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: fixed "URL mismatch" message for root directory.

2011-11-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: fixed NULL-crash on ssl.
	* lftp.cc: (attach) check process existence; remove stale sockets.

2011-10-06  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: save the buffer of target_dir using alloca.
	* ResMgr.cc, ResMgr.h: (ResValue::to_tri_bool, *::QueryTriBool)
	  new methods; use const for const methods; remove ifdef0'ed code.
	* FileSetOutput.cc, commands.cc: use QueryTriBool.
	* ftpclass.cc, resource.cc: new setting ftp:use-tvfs.

2011-09-22  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, FileAccess.cc, commands.cc:
	  use ParsedURL for URL path verification; compare path to home
	  dir ~ properly; send first path component together with root
	  directory to ftp server; use reconnect if cannot change back to
	  home dir.

2011-09-16  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc: (ResMgr::Resource::ClosureMatch) try to match basename,
	  it helps matching torrent metadata urls to *.torrent pattern.

2011-09-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: don't try to send stop to a failed tracker.

2011-08-01  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: check for '###' before parsing ls line.
	* Torrent.cc: use a separate check for posix_fadvise.
	* attach.h: don't use "sun" name; define SUN_LEN macro if missing
	  (patch from y-iida@secom.co.jp).
	* lftp_ssl.cc: use gnutls_priority_set_direct instead of deprecated
	  gnutls_protocol_set_priority.

2011-06-24  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc: print error when date-time spec is missed; remove
	  a hack with Combine.

2011-06-21  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: check ifa_addr!=0.
